kubernetes-microservices-student-portal/k8-services/clusterip-service/course.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: karthikeya91103/portal:user-service-v2
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
