kubernetes-microservices-student-portal/k8-services/clusterip-service/enrollment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enrollment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: enrollment-service

  template:
    metadata:
      labels:
        app: enrollment-service
    spec:
      containers:
        - name: enrollment-service-container
          image: karthikeya91103/portal:enrollment-service-v2
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
