kubernetes-microservices-student-portal/k8-services/clusterip-service/backend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  type: ClusterIP
  selector:
    app: course-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: enrollment-service
spec:
  type: ClusterIP
  selector:
    app: enrollment-service
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
