kubernetes-microservices-student-portal/k8-services/clusterip-service/configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432
              name: postgres

          resources:
            requests:
              cpu: 500m
              memory: 2Gi
              ephemeral-storage: 1Gi
            limits:
              ephemeral-storage: 1Gi

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
