kubernetes-microservices-student-portal/k8-services/clusterip-service/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: ClusterIP  # Default type; can be omitted
  selector:
    app: frontend    # Must match the labels of your target Pods
  ports:
    - name: http
      protocol: TCP
      port: 80        # Port exposed inside the cluster
      targetPort: 80 # Port on the container
