kubernetes-microservices-student-portal/k8-services/clusterip-service/loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
