kubernetes-microservices-student-portal/k8-services/clusterip-service/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
