kubernetes-microservices-student-portal/k8-services/clusterip-service/canary.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
  - user-service

  http:
  - route:

    - destination:
        host: user-service
        subset: v1
      weight: 90

    - destination:
        host: user-service
        subset: v
