kubernetes-microservices-student-portal/k8-services/clusterip-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: student-portal-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - http:
        paths:

          # Frontend UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # User API
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000

          # Course API
          - path: /courses
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 8000

          # Enrollment API
          - path: /enrollments
            pathType: Prefix
            backend:
              service:
                name: enrollment-service
                port:
                  number: 8000
