kubernetes-microservices-student-portal/k8-services/clusterip-service/user-destination.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: user-service
spec:
  host: user-service

  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
